test/seldon/setup/manifests/seldon-gateway.yaml
# gateway for our istio-ingress
# Source: https://docs.seldon.io/projects/seldon-core/en/latest/examples/istio_examples.html?
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: seldon-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
